--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <section id="intro" class="intro main-bg section">
         <div class="main-content intro-content">
             <div class="intro-text-content">
-            <h2>CRIADO SOMENTE COM HTML E CSS</h2>
-            <p>Este é apenas um conteúdo de teste para meu portfolio, o código estará disponível no GitHub para estudos posteriores.     
+            <h2 class="grid-title-mobile">CRIADO SOMENTE COM HTML E CSS</h2>
+            <p class="grid-description-mobile">Este é apenas um conteúdo de teste para meu portfolio, o código estará disponível no GitHub para estudos posteriores.     
             </p>
             </div>
             <div class="intro-img">
@@ -50,7 +50,7 @@
 
     <section id="about" class="white-bg section">
         <div class="main-content about-content">
-            <h2 class="sobre">SOBRE</h2>
+            <h2 class="grid-title-mobile">SOBRE</h2>
             <p>Olá! me chamo Uallesson Nunes ivo, tenho 26 anos e por cerca de 2 anos e meio venho trabalhando com Web design, porém sempre estive atuando na parte do esboço/layout. Com o uso dos Softwares Figma e Adobe XD criei várias templates e as vendia para empresas de pequeno/médio porte para que essas empresas pudessem contratar um programador para desenvolver a página.
             </p>
             <br>
@@ -104,9 +104,8 @@
     </section>
     <section id="pricing" class="main-bg section">
         <div class="main-content price-content">
-          <h2>VALORES</h2>
-          <p>Apenas alguns dos valores mais comuns que são contratados com maior frequência, caso tenha um pedido especial é só entrar em contato e resolvemos a sua solicitação.</p>
-    
+            <h2 class="grid-title">VALORES</h2>
+            <p class="grid-description">Apenas alguns dos valores mais comuns que são contratados com maior frequência, caso tenha um pedido especial é só entrar em contato e resolvemos a sua solicitação.</p>
           <div class="responsive-table">
             <table>    
               <thead>
@@ -145,7 +144,7 @@
       <section id="contact" class="intro white-bg section">
         <div class="main-content intro-content">
           <div class="intro-text-content">
-            <h2>CONTATO</h2>
+            <h2 class="grid-title-mobile">CONTATO</h2>
             <p>Deseja tirar alguma dúvida? ficar por dentro de aglum projeto ou me contratar para um freela? Basta enviar seu email!</p>
           </div>
           <div class="intro-img">
