--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               </div>
     
               <div class="form-group full-width">
-                <button type="submit">Send message</button>
+                <button type="submit">Enviar mensagem</button>
               </div>
             </fieldset>
           </div>  
