Atualizando o contact form 2

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="main-content intro-content">
             <div class="intro-text-content">
             <h2 class="grid-title-mobile">CRIADO SOMENTE COM HTML E CSS</h2>
-            <p class="grid-description-mobile">Este é apenas um conteúdo de teste para meu portfolio, o código estará disponível no GitHub para estudos posteriores.     
+            <p class="grid-description-mobile">Este é apenas um conteúdo de teste para meu portfolio. Estou utilizando um modelo sem back-end. O código estará disponível no GitHub para estudos posteriores.     
             </p>
             </div>
             <div class="intro-img">
