Atualização da bio

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <section id="intro" class="intro main-bg section">
         <div class="main-content intro-content">
             <div class="intro-text-content">
-            <h2 class="grid-title-mobile">CRIADO SOMENTE COM HTML E CSS</h2>
-            <p class="grid-description-mobile">Este é apenas um conteúdo de teste para meu portfolio. Estou utilizando um modelo sem back-end. O código estará disponível no GitHub para estudos posteriores.     
+            <h2 class="grid-title-mobile">Uallesson's portfolio</h2>
+            <p class="grid-description-mobile">Estou desenvolvendo esse site para a exibição do meu processo criatvo e também irei anexar meu portfólio para análise! 
             </p>
             </div>
             <div class="intro-img">
