--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <li><a href="#tecs">Tecs</a></li>
                     <li><a href="#galeria">Projetos</a></li>
                     <li><a href="#contact">Contato</a></li>
+                    <li><a href="https://github.com/Uallessonivo" class="GitBtn" target="_blank">GitHub</a></li>
                 </ul>
             </nav>
         </div>
