Adicionando mais projetos e mais langs

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <section id="tecs" class="grid-one white-bg">
       <div class="grid-one-content main-content">
           <h2 class="grid-title">ESTOU DE OLHO</h2>
-          <p class="grid-description">Tecnologias que estou planejando aprender</p>
+          <p class="grid-description">Tecnologias que pretendo aprender</p>
           <div class="grid grid2">
               <article>
                   <h3>GoLang</h3>
@@ -125,11 +125,23 @@
                 </div>  
             </article>
             <article>
-                <h3>Apache Kafka</h3>
+                <h3>Apache Kafka</h3> 
                 <div class="galeria-img-tec">
                   <img src="./assets/img/apache.png" />
                 </div>  
             </article>
+            <article>
+              <h3>Python</h3>
+              <div class="galeria-img-tec">
+                <img src="./assets/img/python.png" />
+              </div>  
+          </article>
+          <article>
+            <h3>Elixir</h3>
+            <div class="galeria-img-tec">
+              <img src="./assets/img/elixir.png" />
+            </div>  
+        </article>
           </div>            
       </div>
   </section>
@@ -138,25 +150,32 @@
        <section id="galeria" class="grid-one main-bg">
         <div class="grid-one-content main-content">
             <h2 class="grid-title">Projetos</h2>
-            <p class="grid-description">Alguns projetos que venho estudando</p>
+            <p class="grid-description">Alguns projetos que realizei ou estou desenvolvendo</p>
             <div class="grid grid-proj">
                 <div class="galeria-img-proj">
-                    <p>Clone do Youtube - Next JS</p>
+                    <p>Clone do Youtube</p>
                     <img src="./assets/img/youtube.png"                     
                     alt="Site clone inspirado no youtube">
                     <a href="https://youtube-clone-nine.vercel.app/" class="linktitle" target="_blank">Acessar em live</a>
                 </div>
                 <div class="galeria-img-proj">
-                    <p>Instituo Miaw - Bootstrap</p>
+                    <p>Instituo Miaw</p>
                     <img src="./assets/img/miaw.png" 
                     alt="Imagem mostrando um site criado para uma clinica veterianaria">
                     <a href="https://instituomiaw.netlify.app/" class="linktitle" target="_blank">Acessar em live</a>                    
                 </div>
                 <div class="galeria-img-proj">
-                    <p>Techtoy - ainda em estudo</p>
-                    <img src="./assets/img/techtoy.png" 
+                    <p>MBC Contabilidade</p>
+                    <img src="./assets/img/mbc.png" 
                     alt="Imagem mostrando um site criado para uma loja de eletrônicos">
+                    <a href="https://www.mbccontabilidade.com.br/" class="linktitle" target="_blank">Acessar em live</a>  
                 </div>
+                <div class="galeria-img-proj">
+                  <p>App.Finance</p>
+                  <img src="./assets/img/finance.png" 
+                  alt="Imagem mostrando um site criado para uma clinica veterianaria">
+                  <a>Em desenvolvimento</a>                    
+              </div>
             </div>
         </div>
     </section>
