Podcastr em live

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                   <p>Podcastr</p>
                   <img src="./assets/img/podcastr.png" 
                   alt="Imagem mostrando um site criado para uma clinica veterianaria">
-                  <a href="https://github.com/Uallessonivo/podcastrnext" class="linktitle" target="_blank">Acessar projeto</a>                   
+                  <a href="https://podcastrnext-omega.vercel.app/" class="linktitle" target="_blank">Acessar em live</a>                   
               </div>
             </div>
         </div>
