--- a/index.html
+++ b/index.html
@@ -142,6 +142,12 @@
               <img src="./assets/img/elixir.png" />
             </div>  
         </article>
+        <article>
+          <h3>Laravel</h3>
+          <div class="galeria-img-tec">
+            <img src="./assets/img/laravel.png" />
+          </div>  
+      </article>
           </div>            
       </div>
   </section>
@@ -167,21 +173,27 @@
                 <div class="galeria-img-proj">
                     <p>MBC Contabilidade</p>
                     <img src="./assets/img/mbc.png" 
-                    alt="Imagem mostrando um site criado para uma loja de eletrônicos">
+                    alt="Imagem mostrando um site criado para um site de contabilidade">
                     <a href="https://www.mbccontabilidade.com.br/" class="linktitle" target="_blank">Acessar em live</a>  
                 </div>
                 <div class="galeria-img-proj">
                   <p>App.Finance</p>
                   <img src="./assets/img/finance.png" 
-                  alt="Imagem mostrando um site criado para uma clinica veterianaria">
+                  alt="Imagem mostrando um site criado para um projeto de finanças pessoais">
                   <a href="https://appfinance.netlify.app/" class="linktitle" target="_blank">Acessar em live</a>                   
               </div>
               <div class="galeria-img-proj">
                   <p>Podcastr</p>
                   <img src="./assets/img/podcastr.png" 
-                  alt="Imagem mostrando um site criado para uma clinica veterianaria">
+                  alt="Imagem mostrando um site criado para um podcast">
                   <a href="https://podcastrnext-omega.vercel.app/" class="linktitle" target="_blank">Acessar em live</a>                   
               </div>
+              <div class="galeria-img-proj">
+                <p>Tema vscode</p>
+                <img src="./assets/img/vscode.png" 
+                alt="Imagem mostrando um tema criado para o aplicativo visual studio code">
+                <a href="https://marketplace.visualstudio.com/items?itemName=Uallesson.CelestialDraculaTheme" class="linktitle" target="_blank">Acessar Marketplace</a>                   
+            </div>
             </div>
         </div>
     </section>
