--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
                     <a href="https://www.mbccontabilidade.com.br/" class="linktitle" target="_blank">Acessar em live</a>  
                 </div>
                 <div class="galeria-img-proj">
-                  <p>App.Finance</p>
-                  <img src="./assets/img/finance.png" 
+                  <p>Dt Money</p>
+                  <img src="./assets/img/dtmoney.png" 
                   alt="Imagem mostrando um site criado para um projeto de finanças pessoais">
-                  <a href="https://appfinance.netlify.app/" class="linktitle" target="_blank">Acessar em live</a>                   
+                  <a href="https://dtmoney-ruddy.vercel.app/" class="linktitle" target="_blank">Acessar em live</a>                   
               </div>
               <div class="galeria-img-proj">
                   <p>Podcastr</p>
