--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
                       <img src="./assets/img/physics.svg" />
                     </div>  
                 </article>
+                <article>
+                  <h3>Next Js</h3>
+                  <div class="galeria-img-tec">
+                    <img src="./assets/img/next.svg" />
+                  </div>  
+              </article>
             </div>            
         </div>
     </section>
@@ -99,13 +105,7 @@
                   <div class="galeria-img-tec">
                     <img src="./assets/img/golang.png" />
                   </div>                    
-              </article>
-              <article>
-                  <h3>Next Js</h3>
-                  <div class="galeria-img-tec">
-                    <img src="./assets/img/next.svg" />
-                  </div>  
-              </article>
+              </article>              
               <article>
                   <h3>Nest Js</h3>
                   <div class="galeria-img-tec">
@@ -194,6 +194,12 @@
                 alt="Imagem mostrando um tema criado para o aplicativo visual studio code">
                 <a href="https://marketplace.visualstudio.com/items?itemName=Uallesson.CelestialDraculaTheme" class="linktitle" target="_blank">Acessar Marketplace</a>                   
             </div>
+            <div class="galeria-img-proj">
+              <p>Ignews</p>
+              <img src="./assets/img/ignews.png" 
+              alt="Imagem mostrando site com sistema de pagamento recorrente">
+              <a href="https://ignews-uallesson.vercel.app" class="linktitle" target="_blank">Acessar em live</a>                   
+          </div>
             </div>
         </div>
     </section>
