--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <ul onclick="getElementById('close-menu').checked = false">
                     <li><a href="#intro">Home</a></li>
                     <li><a href="#about">Sobre</a></li>
-                    <li><a href="#work">Estudando</a></li>
-                    <li><a href="#tecs">Tecs</a></li>
+                    <li><a href="#stack">Stack</a></li>
+                    <li><a href="#techs">Techs</a></li>
                     <li><a href="#galeria">Projetos</a></li>
                     <li><a href="#contact">Contato</a></li>
                     <li><a href="https://github.com/Uallessonivo" class="GitBtn" target="_blank">GitHub</a></li>
@@ -39,7 +39,7 @@
         <div class="main-content intro-content">
             <div class="intro-text-content">
             <h2 class="grid-title-mobile">Uallesson Nunes Ivo.</h2>
-            <p class="grid-description-mobile">Sejam Bem-vindos ao meu currículo!   
+            <p class="grid-description-mobile">Desenvolvedor Web - React.js/Next.js   
             </p>
             </div>
             <div class="intro-img">
@@ -62,10 +62,10 @@
             </p>
         </div>
     </section>
-    <section id="work" class="grid-one main-bg">
+    <section id="stack" class="grid-one main-bg">
         <div class="grid-one-content main-content">
-            <h2 class="grid-title">ESTUDANDO</h2>
-            <p class="grid-description">Um pouco mais sobre o que estou estudando no momento</p>
+            <h2 class="grid-title">STACK</h2>
+            <p class="grid-description">Um pouco mais sobre o que estou utilizando em meus projetos</p>
             <div class="grid grid2">
                 <article>
                     <h3>JavaScript</h3>
@@ -91,11 +91,35 @@
                     <img src="./assets/img/next.svg" />
                   </div>  
               </article>
+              <article>
+                <h3>FaunaDB</h3>
+                <div class="galeria-img-tec">
+                  <img src="./assets/img/faunadb.png" />
+                </div>                    
+            </article>
+            <article>
+                <h3>Stripe</h3>
+                <div class="galeria-img-tec">
+                  <img src="./assets/img/stripe1.png" />
+                </div>  
+            </article>
+            <article>
+                <h3>tailwind Css</h3>
+                <div class="galeria-img-tec react">
+                  <img src="./assets/img/tailwind-css-logo.svg" />
+                </div>  
+            </article>
+            <article>
+              <h3>Strapi CMS</h3>
+              <div class="galeria-img-tec">
+                <img src="./assets/img/strapi.svg" />
+              </div>  
+          </article>
             </div>            
         </div>
     </section>
 
-    <section id="tecs" class="grid-one white-bg">
+    <section id="techs" class="grid-one white-bg">
       <div class="grid-one-content main-content">
           <h2 class="grid-title">ESTOU DE OLHO</h2>
           <p class="grid-description">Tecnologias que pretendo aprender</p>
