--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section id="stack" class="grid-one main-bg">
         <div class="grid-one-content main-content">
             <h2 class="grid-title">STACK</h2>
-            <p class="grid-description">Um pouco mais sobre o que estou utilizando em meus projetos</p>
+            <p class="grid-description">Um pouco mais sobre o que estou estudando e implementando no momento.</p>
             <div class="grid grid2">
                 <article>
                     <h3>JavaScript</h3>
@@ -78,13 +78,7 @@
                     <div class="galeria-img-tec">
                       <img src="./assets/img/typescript.svg" />
                     </div>  
-                </article>
-                <article>
-                    <h3>React Js</h3>
-                    <div class="galeria-img-tec react">
-                      <img src="./assets/img/physics.svg" />
-                    </div>  
-                </article>
+                </article>               
                 <article>
                   <h3>Next Js</h3>
                   <div class="galeria-img-tec">
@@ -92,15 +86,21 @@
                   </div>  
               </article>
               <article>
-                <h3>FaunaDB</h3>
-                <div class="galeria-img-tec">
+                <h3>Fauna db</h3>
+                <div class="galeria-img-tec react">
                   <img src="./assets/img/faunadb.png" />
+                </div>  
+            </article>
+              <article>
+                <h3>Graph CMS</h3>
+                <div class="galeria-img-tec">
+                  <img src="./assets/img/graph.svg" />
                 </div>                    
             </article>
             <article>
-                <h3>Stripe</h3>
+                <h3>Graphql</h3>
                 <div class="galeria-img-tec">
-                  <img src="./assets/img/stripe1.png" />
+                  <img src="./assets/img/graphql.png" />
                 </div>  
             </article>
             <article>
@@ -114,7 +114,7 @@
               <div class="galeria-img-tec">
                 <img src="./assets/img/strapi.svg" />
               </div>  
-          </article>
+          </article>        
             </div>            
         </div>
     </section>
